--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,11 @@ const username = hasProfile(cookie).username as string;
     </center>
     <div class="quote">
       <center>
-        <span>by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a></span>
+        <span
+          >by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a>, <a
+            href="https://twitter.com/Zastinian">Twitter</a
+          >.</span
+        >
       </center>
     </div>
   </div>
