--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -11,7 +11,11 @@ import LoginForm from "@components/LoginForm.astro";
       <center>
         <span>Email: user@example.com</span>
         <span>Password: 1234</span>
-        <span>by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a></span>
+        <span
+          >by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a>, <a
+            href="https://twitter.com/Zastinian">Twitter</a
+          >.</span
+        >
       </center>
     </div>
   </div>
