--- a/src/layouts/LayoutLogin.astro
+++ b/src/layouts/LayoutLogin.astro
@@ -23,7 +23,7 @@ let login: string = `${d.success}`;
     <link rel="apple-touch-icon" href="/img/favicon.ico" />
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.ico" />
     <link rel="shortcut icon" href="/img/favicon.ico" />
-    <script is:global>
+    <script is:inline>
       window.onload = function () {
         const loginData = document.getElementById("loginInput").value;
         if (loginData == "true") {
