style: Update design

--- a/src/components/LoginForm.astro
+++ b/src/components/LoginForm.astro
@@ -1,10 +1,12 @@
 <form action="/api/session" accept-charset="UTF-8" method="POST">
   <div>
-    <label for="email">Email</label>
+    <label for="email">Email:</label>
+    <br />
     <input type="email" name="email" required />
   </div>
   <div>
-    <label for="password">Password</label>
+    <label for="password">Password:</label>
+    <br />
     <input type="password" name="password" required />
   </div>
   <br />
