--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background-color: #494949;
   margin: 0;
   padding: 0;
 }
@@ -16,10 +16,11 @@ body {
 .login {
   width: 400px;
   margin: 100px auto;
-  background-color: #ffffff;
+  background-color: #333333;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 0px rgba(99, 98, 98, 0.75);
+  color: white;
 }
 
 .quote {
@@ -32,14 +33,109 @@ body {
   font-size: 14px;
   margin-top: 10px;
   font-style: normal;
-  color: #646363;
+  color: #757575;
+}
+
+.quote a {
+  text-decoration: underline;
+  color: rgba(30, 158, 243, 0.733);
+}
+
+.quote a:hover {
+  color: rgb(51, 170, 250);
 }
 
 .index {
   width: 400px;
   margin: 100px auto;
-  background-color: #ffffff;
+  background-color: #333333;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 0px rgba(99, 98, 98, 0.75);
+  color: white;
+}
+
+.index button {
+  display: flex;
+  outline: 0;
+  padding: 8px 16px;
+  border-radius: 6px;
+  font-size: 13px;
+  background: #373737;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  color: #fff;
+  cursor: pointer;
+  border: 2px solid transparent;
+  transition: all 0.4s ease;
+  margin: auto;
+  margin-top: 2.5%;
+  margin-bottom: 5%;
+}
+
+.index button:hover {
+  border-color: #373737;
+  background-color: #494949;
+  color: #373737;
+}
+
+.index button:disabled,
+button[disabled] {
+  background-color: #2e2e2e;
+  color: #666;
+}
+
+.login button {
+  display: flex;
+  outline: 0;
+  padding: 8px 16px;
+  border-radius: 6px;
+  font-size: 13px;
+  background: #373737;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  color: #fff;
+  cursor: pointer;
+  border: 2px solid transparent;
+  transition: all 0.4s ease;
+  margin: auto;
+  margin-top: 2.5%;
+  margin-bottom: 5%;
+}
+
+.login button:hover {
+  border-color: #373737;
+  background-color: #494949;
+  color: #373737;
+}
+
+.login button:disabled,
+button[disabled] {
+  background-color: #2e2e2e;
+  color: #666;
+}
+
+.login h1 {
+  text-align: center;
+  margin-bottom: 2.5%;
+}
+
+.login input {
+  background-color: #2f2f30;
+  outline: 0;
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  padding: 10px 22px;
+  border: 2px solid #2f2f30;
+  min-width: 300px;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  margin-top: 2.5%;
+  margin-bottom: 5%;
+}
+
+.login input:focus {
+  border: 2px solid #3a3d41;
+}
+
+.login label {
+  font-size: 18px;
 }
