--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import hasProfile from "@utils/profile";
 
-const cookie: string = `${Astro.cookies.get("login")?.value}`;
+const cookie: string = `${Astro.cookies.get(import.meta.env.COOKIE_NAME || "_Security_Login_")?.value}`;
 const d = hasProfile(cookie);
 let login: string = `${d.success}`;
 ---
