--- a/src/pages/api/session.astro
+++ b/src/pages/api/session.astro
@@ -2,14 +2,15 @@
 import loginSave from "@utils/login";
 let token = "none";
 let redir = "/login";
-let maxAge = "none";
+let cookieName = import.meta.env.COOKIE_NAME || "_Security_Login_";
+let maxAge = 604800;
 if (Astro.request.method === "POST") {
   const data = Object.fromEntries(new URLSearchParams(await Astro.request.text()));
-  const d = await loginSave(data.email, data.password);
+  const d = await loginSave(data.email, data.password, Number(import.meta.env.MAX_AGE || 604800));
   if (d.success == true) {
-    token = d?.token;
+    token = d?.token || "none";
     redir = "/";
-    maxAge = d?.max;
+    maxAge = d?.max || 604800;
   }
 } else {
   return Astro.redirect("/login");
@@ -21,10 +22,11 @@ if (Astro.request.method === "POST") {
     token,
     redir,
     maxAge,
+    cookieName,
   }}
 >
   if (token !== "none") {
-    document.cookie = `login=${token}; Max-Age=${maxAge}; path=/`;
+    document.cookie = `${cookieName}=${token}; Max-Age=${maxAge}; path=/`;
     window.location.href = redir;
   }
 </script>
