refactor: Added session is:inline

--- a/src/pages/api/session.astro
+++ b/src/pages/api/session.astro
@@ -24,6 +24,7 @@ if (Astro.request.method === "POST") {
     maxAge,
     cookieName,
   }}
+  is:inline
 >
   if (token !== "none") {
     document.cookie = `${cookieName}=${token}; Max-Age=${maxAge}; path=/`;
