--- a/src/layouts/LayoutLogin.astro
+++ b/src/layouts/LayoutLogin.astro
@@ -3,10 +3,10 @@ import hasProfile from "@utils/profile";
 
 const cookie: string = `${Astro.cookies.get(import.meta.env.COOKIE_NAME || "_Security_Login_")?.value}`;
 const d = hasProfile(cookie);
-let login: string = `${d.success}`;
+const login: string = `${d.success}`;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
