--- a/src/pages/logout.astro
+++ b/src/pages/logout.astro
@@ -1,7 +1,7 @@
 ---
 let cookie = "none";
-let redir = "/login";
-let cookieName = import.meta.env.COOKIE_NAME || "_Security_Login_";
+const redir = "/login";
+const cookieName = import.meta.env.COOKIE_NAME || "_Security_Login_";
 if (Astro.request.method === "POST") {
   const cook: string = `${Astro.cookies.get("login")?.value}`;
   if (cook) {
