--- a/src/pages/api/session.astro
+++ b/src/pages/api/session.astro
@@ -2,12 +2,12 @@
 import loginSave from "@utils/login";
 let token = "none";
 let redir = "/login";
-let cookieName = import.meta.env.COOKIE_NAME || "_Security_Login_";
+const cookieName = import.meta.env.COOKIE_NAME || "_Security_Login_";
 let maxAge = 604800;
 if (Astro.request.method === "POST") {
   const data = Object.fromEntries(new URLSearchParams(await Astro.request.text()));
   const d = await loginSave(data.email, data.password, Number(import.meta.env.MAX_AGE || 604800));
-  if (d.success == true) {
+  if (d.success === true) {
     token = d?.token || "none";
     redir = "/";
     maxAge = d?.max || 604800;
