--- a/src/pages/api/session.astro
+++ b/src/pages/api/session.astro
@@ -1,5 +1,5 @@
 ---
-import loginSave from "@utils/login";
+import loginSave from "@/utils/login";
 let token = "none";
 let redir = "/login";
 const cookieName = import.meta.env.COOKIE_NAME || "_Security_Login_";
