--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@layouts/LayoutLogin.astro";
-import LoginForm from "@components/LoginForm.astro";
+import Layout from "@/layouts/LayoutLogin.astro";
+import LoginForm from "@/components/LoginForm.astro";
 ---
 
 <Layout>
