--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,14 @@ import hasProfile from "@/utils/profile";
 
 const cookie: string = `${Astro.cookies.get(import.meta.env.COOKIE_NAME || "_Security_Login_")?.value}`;
 const username = hasProfile(cookie).username as string;
+const d = hasProfile(cookie);
+
+if (d.success === false) {
+  return Astro.redirect("/login");
+}
 ---
 
-<Layout>
+<Layout page="Home">
   <div class="index">
     <center>
       <h1>Welcome, {username}</h1>
