--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -4,7 +4,7 @@ import LoginForm from "@/components/LoginForm.astro";
 import hasProfile from "@/utils/profile";
 
 const cookie: string = `${Astro.cookies.get(import.meta.env.COOKIE_NAME || "_Security_Login_")?.value}`;
-const d = hasProfile(cookie);
+const d = hasProfile(cookie, import.meta.env.COOKIE_SECRET || "secret");
 
 if (d.success === true) {
   return Astro.redirect("/");
