--- a/src/components/LoginForm.astro
+++ b/src/components/LoginForm.astro
@@ -10,5 +10,5 @@
     <input type="password" name="password" required />
   </div>
   <br />
-  <button type="submit">Sumbit</button>
+  <button type="submit">Submit</button>
 </form>
