--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,15 +13,36 @@ body {
   padding: 0;
 }
 
-.login, .index {
+.login-container {
   width: 90%;
   max-width: 400px;
   margin: 100px auto;
+  position: relative;
+}
+
+.error-message {
+  background-color: #ff4c4c;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0px 0px 10px 0px rgba(99, 98, 98, 0.75);
+  margin-bottom: 45px;
+  margin-top: -30px;
+}
+
+.login,
+.index {
   background-color: #333333;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 0px rgba(99, 98, 98, 0.75);
   color: white;
+  transition: margin-top 0.3s ease;
+}
+
+.login-container.error-active .login {
+  margin-top: -50px;
 }
 
 .quote {
@@ -46,7 +67,8 @@ body {
   color: rgb(51, 170, 250);
 }
 
-.index button, .login button {
+.index button,
+.login button {
   display: flex;
   outline: 0;
   padding: 8px 16px;
@@ -63,13 +85,16 @@ body {
   margin-bottom: 5%;
 }
 
-.index button:hover, .login button:hover {
+.index button:hover,
+.login button:hover {
   border-color: #373737;
   background-color: #494949;
   color: #373737;
 }
 
-.index button:disabled, .login button:disabled, button[disabled] {
+.index button:disabled,
+.login button:disabled,
+button[disabled] {
   background-color: #2e2e2e;
   color: #666;
 }
@@ -102,7 +127,9 @@ body {
 }
 
 @media (max-width: 600px) {
-  .login, .index {
+
+  .login,
+  .index {
     margin: 50px auto;
     padding: 15px;
   }
