--- a/src/components/LoginForm.astro
+++ b/src/components/LoginForm.astro
@@ -1,4 +1,4 @@
-<form action="/api/session" accept-charset="UTF-8" method="POST">
+<form action="/api/login" accept-charset="UTF-8" method="POST">
   <div>
     <label for="email">Email:</label>
     <br />
