--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body {
   padding: 0;
 }
 
-.login-container {
+.container {
   width: 90%;
   max-width: 400px;
   margin: 100px auto;
@@ -41,7 +41,7 @@ body {
   transition: margin-top 0.3s ease;
 }
 
-.login-container.error-active .login {
+.container.error-active .login {
   margin-top: -50px;
 }
 
