feat: Added container

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,20 +12,22 @@ if (d.success === false) {
 ---
 
 <Layout page="Home">
-  <div class="index">
-    <center>
-      <h1>Welcome, {d.username}</h1>
-      <br />
-      <Button />
-    </center>
-    <div class="quote">
+  <div class="container">
+    <div class="index">
       <center>
-        <span
-          >by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a>, <a
-            href="https://twitter.com/Zastinian">Twitter</a
-          >.</span
-        >
+        <h1>Welcome, {d.username}</h1>
+        <br />
+        <Button />
       </center>
+      <div class="quote">
+        <center>
+          <span
+            >by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a>, <a
+              href="https://twitter.com/Zastinian">Twitter</a
+            >.</span
+          >
+        </center>
+      </div>
     </div>
   </div>
 </Layout>
