--- a/src/components/LogoutButton.astro
+++ b/src/components/LogoutButton.astro
@@ -1,3 +1,3 @@
-<form action="/api/logout" accept-charset="UTF-8" method="POST">
+<form action="/api/logout" accept-charset="UTF-8" method="GET">
   <button type="submit">Logout</button>
 </form>
