--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,12 +1,8 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import LoginForm from "@/components/LoginForm.astro";
-import hasProfile from "@/utils/profile";
 
-const cookie: string = `${Astro.cookies.get(import.meta.env.COOKIE_NAME || "_Security_Login_")?.value}`;
-const d = hasProfile(cookie, import.meta.env.COOKIE_SECRET || "secret");
-
-if (d.success === true) {
+if (Astro.locals.profile.success === true) {
   return Astro.redirect("/");
 }
 
