refactor: Clean up code formatting

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,9 +20,9 @@ if (profile.success === false) {
       <div class="quote">
         <center>
           <span
-            >by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a>, <a
-              href="https://twitter.com/Zastinian">Twitter</a
-            >.</span
+            >by <a href="https://zastinian.com">Zastinian</a>, <a
+              href="https://github.com/Zastinian/Astro-Login">Github Code</a
+            >, <a href="https://twitter.com/Zastinian">Twitter</a>.</span
           >
         </center>
       </div>
