--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -26,7 +26,9 @@ const error = new URL(Astro.request.url).searchParams.get("error");
           <span>Email: user@example.com</span>
           <span>Password: 1234</span>
           <span>
-            by <a href="https://zastinian.com">Zastinian</a>, <a href="https://github.com/Zastinian/Astro-Login">Github Code</a>,{" "}
+            by <a href="https://zastinian.com">Zastinian</a>, <a
+              href="https://github.com/Zastinian/Astro-Login">Github Code</a
+            >,{" "}
             <a href="https://twitter.com/Zastinian">Twitter</a>.
           </span>
         </center>
